# wasm2sea

./: .gitignore  .gitmodules  1.ir  10.ir  102.ir  11.ir  12.ir  14.ir  15.ir  17.ir  18.ir  19.ir  2.ir  21.ir  24.ir  26.ir  27.ir  28.ir  29.ir  3.ir  30.ir  32.ir  33.ir  34.ir  36.ir  37.ir  4.ir  41.ir  42.ir  43.ir  44.ir  46.ir  47.ir  48.ir  49.ir  5.ir  50.ir  51.ir  52.ir  53.ir  (+51 more)
.github/workflows/: ci.yml
benchmarks/: compile_polybench.sh  run_wasm2sea.sh  wasm2sea_log.txt
benchmarks/polybench/: build_native.sh
benchmarks/polybench/kernels/: 2mm.c  3mm.c  adi.c  atax.c  bicg.c  cholesky.c  correlation.c  covariance.c  deriche.c  durbin.c  fdtd-2d.c  floyd-warshall.c  gemm.c  gemver.c  gesummv.c  gramschmidt.c  heat-3d.c  jacobi-1d.c  jacobi-2d.c  lu.c  ludcmp.c  mvt.c  nussinov.c  seidel-2d.c  symm.c  syr2k.c  syrk.c  trisolv.c  trmm.c
dstogov/ir/gen_ir_fold_hash.dSYM/Contents/: Info.plist
dstogov/ir/gen_ir_fold_hash.dSYM/Contents/Resources/Relocations/aarch64/: gen_ir_fold_hash.yml
dstogov/ir/minilua.dSYM/Contents/: Info.plist
dstogov/ir/minilua.dSYM/Contents/Resources/Relocations/aarch64/: minilua.yml
dstogov/ir/tests/c/: conv_007.irt  conv_008.irt  conv_009.irt
src/: ir_bridge.cpp  ir_bridge.hpp  ir_interpreter.cpp  ir_validator.cpp  loop_transform.cpp  main.cpp  slp_detect.hpp  value_ir.hpp  value_ir_dump.cpp  value_ir_dump.hpp  value_ir_eval.cpp  value_ir_eval.hpp  value_ir_verify.hpp  wasm_dump.cpp  wasm_dump.hpp  wasm_instr.hpp  wasm_lower.cpp  wasm_lower.hpp  wasm_reader.cpp  wasm_reader.hpp  wasm_to_instr_seq_converter.hpp
src/node/: AddNode.hpp  AndNode.hpp  BrIfNode.hpp  BrNode.hpp  BuildContext.hpp  CallNode.hpp  ClzNode.hpp  ControlFlowState.hpp  CtzNode.hpp  DivSNode.hpp  DivUNode.hpp  ElseNode.hpp  EndNode.hpp  EqNode.hpp  EqzNode.hpp  F64AbsNode.hpp  F64AddNode.hpp  F64ConstNode.hpp  F64ConvertINode.hpp  F64CosNode.hpp  F64DivNode.hpp  F64EqNode.hpp  F64ExpNode.hpp  F64GeNode.hpp  F64GtNode.hpp  F64LeNode.hpp  F64LoadNode.hpp  F64LogNode.hpp  F64LtNode.hpp  F64MaxNode.hpp  F64MinNode.hpp  F64MulNode.hpp  F64NeNode.hpp  F64NegNode.hpp  F64SinNode.hpp  F64SqrtNode.hpp  F64StoreNode.hpp  F64SubNode.hpp  GeSNode.hpp  GeUNode.hpp  (+45 more)
tests/: 10args.wat  2mm_harness.c  3mm_harness.c  add.wat  adi_harness.c  atax_harness.c  bicg_harness.c  bubble_sort.c  bubble_sort.wat  bubble_sort_em.wat  call_chain.wat  call_simple.wat  cholesky_harness.c  correlation_harness.c  covariance_harness.c  deriche_harness.c  div_s.wat  durbin_harness.c  f64_convert_i32_s.wat  f64_convert_i64_s.wat  factorial.wat  factorial_rec.wat  fibonacci.js  fibonacci.wat  floyd_warshall_harness.c  gemm_harness.c  gemver_harness.c  gesummv_harness.c  gramschmidt_harness.c  gt.wat  heat_3d_harness.c  i32_store_load.wat  i32_trunc_f64_s.wat  i32_wrap_i64.wat  i64_add.wat  i64_div_s.wat  i64_extend_i32_s.wat  i64_extend_i32_u.wat  i64_mul.wat  i64_mul_from_i32_s.wat  (+114 more)
tests/legacy/: add.wat  bitwise_01.wat  bitwise_02.wat  bitwise_04.wat  bitwise_05.wat  clamp.wat  compare_simple.wat  fibonacci.wat  if_no_else.wat  locals_02.wat  locals_05.wat  locals_09.wat  long_chain.wat  loop_countdown.wat  nested_arithmetic.wat  select.wat  test2.wat  test3.wat
tests/testdata/: add.txt  bitwise_01.txt  bitwise_03.txt  clamp.txt  compare.txt  locals_01.txt  locals_03.txt  locals_05.txt  locals_06.txt  locals_07.txt  max.txt  min.txt  test_abs.txt  test_bitwise_02.txt  test_bitwise_04.txt  test_bitwise_05.txt  test_bitwise_06.txt  test_div.txt  test_locals_02.txt  test_locals_04.txt  test_locals_08.txt  test_locals_09.txt  test_locals_10.txt  test_max.txt  test_min.txt  test_mul.txt  test_rem.txt  test_sub.txt
